# cpp-software-patterns

./: CMakeLists.txt  LICENSE  README.md
BaseLib/: CMakeLists.txt  CommonClasses.cpp  CommonClasses.h  CommonDefines.cpp  CommonDefines.h  CommonOperators.cpp  CommonOperators.h  Count.cpp  Count.h  Debug.cpp  Debug.h  Duration.cpp  Duration.h  ElapsedTimer.cpp  ElapsedTimer.h  Event.cpp  Event.h  Exception.cpp  Exception.h  ExceptionManager.cpp  ExceptionManager.h  Export.h  GUUID.cpp  GUUID.h  IncludeLibs.h  InstanceHandle.cpp  InstanceHandle.h  InterruptHandler.cpp  InterruptHandler.h  InterruptibleWaitCondition.cpp  InterruptibleWaitCondition.h  LogDebug.cpp  LogDebug.h  Multiton.h  Mutex.cpp  Mutex.h  MutexBare.cpp  MutexBare.h  MutexLocker.cpp  MutexLocker.h  (+39 more)
DCPS/: CMakeLists.txt  CommonDefines.h  Export.h  IncludeExtLibs.h  IncludeLibs.h
DDS/: CMakeLists.txt  CommonDefines.h  DataReaderQoS.cpp  DataReaderQoS.h  DataWriterQoS.cpp  DataWriterQoS.h  DomainParticipantFactoryQoS.cpp  DomainParticipantFactoryQoS.h  DomainParticipantQoS.cpp  DomainParticipantQoS.h  Export.h  IncludeExtLibs.h  IncludeLibs.h  PublisherQoS.cpp  PublisherQoS.h  SubscriberQoS.cpp  SubscriberQoS.h  TopicQoS.cpp  TopicQoS.h
DataReactor/: CMakeLists.txt  Export.h  IncludeExtLibs.h  IncludeLibs.cpp  IncludeLibs.h
GraphLib/: CMakeLists.txt  Export.h  IncludeLibs.cc  IncludeLibs.h  boostprop.cc  boostprop.h  simdefs.cc  simdefs.h  simtime.cc  simtime.h
IntactInfra/: CMakeLists.txt  ConfigurationFile.cpp  ConfigurationFile.h  Export.h  IncludeExtLibs.h  IncludeLibs.h
IntactMiddleware/: CMakeLists.txt  Export.h  GroupConnectionManager.cpp  GroupConnectionManager.h  GroupManagerBase.cpp  GroupManagerBase.h  GroupManagerConnection.cpp  GroupManagerConnection.h  INetMulticastManager.cpp  INetMulticastManager.h  INetNATManager.cpp  INetNATManager.h  IncludeExtLibs.h  IncludeLibs.h  IntactComponent.cpp  IntactComponent.h  IntactManagerBase.cpp  IntactManagerBase.h  LookupServerBase.cpp  LookupServerBase.h  MembershipManagerBase.cpp  MembershipManagerBase.h  MembershipManagerConnection.cpp  MembershipManagerConnection.h  MiddlewareSettings.cpp  MiddlewareSettings.h  MulticastManager.cpp  MulticastManager.h  ProcessFactoryBase.cpp  ProcessFactoryBase.h  RpcMulticastManager.cpp  RpcMulticastManager.h  ServiceConnectionManager.cpp  ServiceConnectionManager.h  ServiceManagerBase.cpp  ServiceManagerBase.h  ServiceManagerConnection.cpp  ServiceManagerConnection.h  SystemManagerBase.cpp  SystemManagerBase.h  (+2 more)
IntactObjects/: CMakeLists.txt  Export.h  IString.h  IncludeExtLibs.h  IncludeLibs.h  ObjectSerializer.cpp  ObjectSerializer.h
MembershipManager/: CMakeLists.txt  ClientDynamicsManager.cpp  ClientDynamicsManager.h  Export.h  GroupManager.cpp  GroupManager.h  GroupManagerConnection.cpp  GroupManagerConnection.h  IncludeExtLibs.h  IncludeLibs.h  MembershipManager.cpp  MembershipManager.h  MembershipManagerConnection.cpp  MembershipManagerConnection.h
MicroMiddleware/: CMakeLists.txt  CommonDefines.h  ComponentBase.cpp  ComponentBase.h  ComponentManager.cpp  ComponentManager.h  Export.h  IncludeExtLibs.h  IncludeLibs.h  MiddlewareException.cpp  MiddlewareException.h  MiddlewareSettings.cpp  MiddlewareSettings.h  RmiInterface.cpp  RmiInterface.h  RmiObjectBase.cpp  RmiObjectBase.h  Runtime.cpp  Runtime.h
NetworkInformationClient/: ActiveMeasurement.cpp  ActiveMeasurement.h  CMakeLists.txt  IncludeExtLibs.h  VivaldiClient.cpp  VivaldiClient.h  main.cpp
NetworkInformationLib/: CMakeLists.txt  Export.h  IVivaldiClientBase.h  IVivaldiGroupBase.h  IVivaldiManagerBase.h  IncludeExtLibs.h  IncludeLibs.h  VivaldiBase.h  VivaldiClientBase.h  VivaldiDefines.h  VivaldiGroupBase.h  VivaldiInformation.cpp  VivaldiInformation.h  VivaldiManagerBase.h  vivaldi.cpp  vivaldi.h
NetworkInformationManager/: CMakeLists.txt  IncludeExtLibs.h  NetworkInformationManager.xml  VivaldiManager.cpp  VivaldiManager.h  main.cpp  pl_vivaldi.cc  pl_vivaldi.h
NetworkLib/: BufferedSocketReader.h  BufferedSocketWriter.h  BufferedTcpSocketReader.cpp  BufferedTcpSocketReader.h  BufferedTcpSocketWriter.cpp  BufferedTcpSocketWriter.h  BufferedUdpSocketReader.cpp  BufferedUdpSocketReader.h  BufferedUdpSocketWriter.cpp  BufferedUdpSocketWriter.h  CMakeLists.txt  CommonDefines.h  ConnectionManager.cpp  ConnectionManager.h  Export.h  IncludeExtLibs.h  IncludeLibs.h  NetAddress.cpp  NetAddress.h
ProcessFactory/: CMakeLists.txt  FactoryLibrary.cpp  FactoryLibrary.h  FactoryLibraryLinux.cpp  FactoryLibraryWindows.cpp  IncludeExtLibs.h  PdhQuery.cpp  PdhQuery.h  ProcessFactory.cpp  ProcessFactory.h  ResourceMonitor.cpp  ResourceMonitor.h  main.cpp
RTPS/: CMakeLists.txt  CommonDefines.h  Export.h  IncludeExtLibs.h  IncludeLibs.h
RxActor/: Actor.h  ActorComposer.h  ActorController.h  ActorControllerData.h  ActorControllerPolicy.cpp  ActorControllerPolicy.h  ActorData.h  ActorPath.cpp  ActorPath.h  ActorPolicy.cpp  ActorPolicy.h  ActorProxy.cpp  ActorProxy.h  ActorSystem.cpp  ActorSystem.h  CMakeLists.txt  CommonDefines.h  Export.h  IncludeLibs.cpp  IncludeLibs.h  Processor.h  Supervisor.cpp  Supervisor.h  SupervisorAlgorithms.cpp  SupervisorAlgorithms.h  SupervisorData.cpp  SupervisorData.h  SupervisorPolicy.cpp  SupervisorPolicy.h
RxCommand/: AsyncCompletionController.cpp  AsyncCompletionController.h  CMakeLists.txt  Command.h  CommandBase.h  CommandController.cpp  CommandController.h  CommandControllerAction.h  CommandControllerBase.h  CommandControllerPolicy.cpp  CommandControllerPolicy.h  CommandControllerSubscription.h  CommandFactory.cpp  CommandFactory.h  CommandPolicy.cpp  CommandPolicy.h  CommandSubscription.h  Commands.cpp  Commands.h  CommandsHandle.cpp  CommandsHandle.h  Export.h  IncludeExtLibs.h  IncludeLibs.h  MementoCommand.h  MementoCommandController.h  ReactorConfig.cpp  ReactorConfig.h
RxConcurrent/: ActionFactory.h  CMakeLists.txt  CommonDefines.cpp  CommonDefines.h  Composer1.cpp  Composer1.h  Condition.cpp  Condition.h  Export.h  FlowController.h  FlowControllerAction.h  FlowControllerPolicy.cpp  FlowControllerPolicy.h  (+22 more)
(+1116 files in other folders)
