cmake_minimum_required(VERSION 3.3.2)
project(GraphLib)

#SET(LIB_NAME GraphLib)
#SET(SOURCE_PATH ${ONE_SOURCE_DIR}/${LIB_NAME})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter -Wno-unused-variable -Wno-sign-compare -Wno-unused-private-field -Wno-reorder -Wno-switch")

set(SOURCE_FILES
    graphalgs/complete_graph.cc
    graphalgs/complete_graph.h
    graphalgs/coreh.cc
    graphalgs/coreh.h
    graphalgs/graphalgs.cc
    graphalgs/graphalgs.h
    graphalgs/insert_mesh_algorithms.cc
    graphalgs/insert_mesh_algorithms.h
    graphalgs/mesh_construction.cc
    graphalgs/mesh_construction.h
    graphalgs/meshalgs.cc
    graphalgs/meshalgs.h
    graphalgs/remove_mesh_algorithms.cc
    graphalgs/remove_mesh_algorithms.h
    graphalgs/steiner_set.cc
    graphalgs/steiner_set.h
    graphstats/graphstats.cc
    graphstats/graphstats.h
    graphstats/recordtree.cc
    graphstats/recordtree.h
    graphviz/graphviz.cc
    graphviz/graphviz.h
    network/group_info.cc
    network/group_info.h
    network/vertex_set.cc
    network/vertex_set.h
    smtalgs/adh.cc
    smtalgs/adh.h
    smtalgs/bddlsph.cc
    smtalgs/bddlsph.h
    smtalgs/bdsph.cc
    smtalgs/bdsph.h
    smtalgs/dcdbsp.cc
    smtalgs/dcdbsp.h
    smtalgs/dcdbsph.cc
    smtalgs/dcdbsph.h
    smtalgs/dcsp.cc
    smtalgs/dcsp.h
    smtalgs/dcsph.cc
    smtalgs/dcsph.h
    smtalgs/diameter-dnh.cc
    smtalgs/diameter-dnh.h
    smtalgs/dijkstra_visitors.cc
    smtalgs/dijkstra_visitors.h
    smtalgs/dldnh.cc
    smtalgs/dldnh.h
    smtalgs/dlrsph.cc
    smtalgs/dlrsph.h
    smtalgs/dlsph_bauer.cc
    smtalgs/dlsph_bauer.h
    smtalgs/dnh.cc
    smtalgs/dnh.h
    smtalgs/dsph.cc
    smtalgs/dsph.h
    smtalgs/floyd_warshall_khv.hpp
    smtalgs/mddlsph.cc
    smtalgs/mddlsph.h
    smtalgs/mdsph.cc
    smtalgs/mdsph.h
    smtalgs/rcdlsph.cc
    smtalgs/rcdlsph.h
    smtalgs/rcsph.cc
    smtalgs/rcsph.h
    smtalgs/rsph.cc
    smtalgs/rsph.h
    smtalgs/sph.cc
    smtalgs/sph.h
    smtalgs/steiner_class.cc
    smtalgs/steiner_class.h
    treealgs/bounded_diameter_dynamics.cc
    treealgs/dijkstra_sp.cc
    treealgs/dijkstra_sp.h
    treealgs/fheap.cc
    treealgs/fheap.h
    treealgs/floyd_warshall_apsp.cc
    treealgs/floyd_warshall_apsp.h
    treealgs/heap.h
    treealgs/insert_dynamics.cc
    treealgs/insert_dynamics.h
    treealgs/prim_bdrbst.cc
    treealgs/prim_bdrbst.h
    treealgs/prim_mddbst.cc
    treealgs/prim_mddbst.h
    treealgs/prim_mst.cc
    treealgs/prim_mst.h
    treealgs/prim_ottc.cc
    treealgs/prim_ottc.h
    treealgs/prim_rgh_bdmst.cc
    treealgs/prim_rgh_bdmst.h
    treealgs/reconfig_algs.cc
    treealgs/reconfig_algs.h
    treealgs/remove_dynamics.cc
    treealgs/remove_dynamics.h
    treealgs/tree_dynamics.cc
    treealgs/tree_dynamics.h
    treealgs/treealgs.cc
    treealgs/treealgs.h
    treealgs/treestructure.cc
    treealgs/treestructure.h
    boostprop.cc
    boostprop.h
    Export.h
    IncludeLibs.cc
    IncludeLibs.h
    simdefs.cc
    simdefs.h
    simtime.cc
    simtime.h)

add_definitions(-DMAKE_DLL_GraphLib)
include_directories(${SOURCE_FILES})
add_library(GraphLib SHARED ${SOURCE_FILES})
