cmake_minimum_required(VERSION 3.3.2)
project(MicroMiddleware)

set(SOURCE_FILES
    INet/IncludeLibs.h
    INet/INetBase.cpp
    INet/INetBase.h
    INet/INetBufferedMessage.cpp
    INet/INetBufferedMessage.h
    INet/INetConnection.cpp
    INet/INetConnection.h
    INet/INetConnectionManager.cpp
    INet/INetConnectionManager.h
    INet/INetInterfaceManager.cpp
    INet/INetInterfaceManager.h
    INet/INetInterfaces.h
    INet/INetMulticast.cpp
    INet/INetMulticast.h
    INet/INetMulticastProxy.cpp
    INet/INetMulticastProxy.h
    INet/INetNATManager.cpp
    INet/INetNATManager.h
    INet/INetOverlayPublisher.cpp
    INet/INetOverlayPublisher.h
    INet/INetOverlaySubscriber.cpp
    INet/INetOverlaySubscriber.h
    INet/INetProxy.cpp
    INet/INetProxy.h
    INet/INetServerListener.cpp
    INet/INetServerListener.h
    INet/INetStub.cpp
    INet/INetStub.h
    Interfaces/ExceptionMulticastBase.cpp
    Interfaces/ExceptionMulticastBase.h
    Interfaces/IncludeLibs.h
    Interfaces/RouteManagerBase.cpp
    Interfaces/RouteManagerBase.h
    Net/AlmForwarder.cpp
    Net/AlmForwarder.h
    Net/AlmMulticastPublisher.cpp
    Net/AlmMulticastPublisher.h
    Net/AlmPublisher.cpp
    Net/AlmPublisher.h
    Net/AlmServer.cpp
    Net/AlmServer.h
    Net/AlmSubscriber.cpp
    Net/AlmSubscriber.h
    Net/AlmSubscriberListener.h
    Net/IncludeLibs.h
    Net/IPPublisher.cpp
    Net/IPPublisher.h
    Net/IPSubscriber.cpp
    Net/IPSubscriber.h
    Net/IPSubscriberListener.cpp
    Net/IPSubscriberListener.h
    Net/RmiBase.cpp
    Net/RmiBase.h
    Net/RmiClient.cpp
    Net/RmiClient.h
    Net/RmiIOBase.h
    Net/RmiMulticast.cpp
    Net/RmiMulticast.h
    Net/RmiMulticastClient.cpp
    Net/RmiMulticastClient.h
    Net/RmiMulticastServer.cpp
    Net/RmiMulticastServer.h
    Net/RmiMulticastServerListener.cpp
    Net/RmiMulticastServerListener.h
    Net/RmiServer.cpp
    Net/RmiServer.h
    Net/RmiServerListener.cpp
    Net/RmiServerListener.h
    Net/RmiSharedBase.cpp
    Net/RmiSharedBase.h
    Net/RmiSslClient.cpp
    Net/RmiSslClient.h
    Net/RmiSslServer.cpp
    Net/RmiSslServer.h
    Net/RpcBase.cpp
    Net/RpcBase.h
    Net/RpcClient.cpp
    Net/RpcClient.h
    Net/RpcMulticastClient.cpp
    Net/RpcMulticastClient.h
    Net/RpcMulticastServer.cpp
    Net/RpcMulticastServer.h
    Net/RpcMulticastServerListener.cpp
    Net/RpcMulticastServerListener.h
    Net/RpcServer.cpp
    Net/RpcServer.h
    NetObjects/GroupHandle.cpp
    NetObjects/GroupHandle.h
    NetObjects/GroupInformation.cpp
    NetObjects/GroupInformation.h
    NetObjects/HostInformation.cpp
    NetObjects/HostInformation.h
    NetObjects/HostResources.cpp
    NetObjects/HostResources.h
    NetObjects/IncludeLibs.h
    NetObjects/InterfaceHandle.cpp
    NetObjects/InterfaceHandle.h
    NetObjects/RpcIdentifier.cpp
    NetObjects/RpcIdentifier.h
    CommonDefines.h
    ComponentBase.cpp
    ComponentBase.h
    ComponentManager.cpp
    ComponentManager.h
    Export.h
    IncludeExtLibs.h
    IncludeLibs.h
    MiddlewareException.cpp
    MiddlewareException.h
    MiddlewareSettings.cpp
    MiddlewareSettings.h
    RmiInterface.cpp
    RmiInterface.h
    RmiObjectBase.cpp
    RmiObjectBase.h
    Runtime.cpp
    Runtime.h)

add_definitions(-DMAKE_DLL_MicroMiddleware)

SET(LIB_NAME MicroMiddleware)
SET(EXTRA_LIBS BaseLib NetworkLib)
#SET(SOURCE_PATH ${ONE_SOURCE_DIR}/${LIB_NAME})

include_directories(${SOURCE_FILES})
add_library(${LIB_NAME} SHARED ${SOURCE_FILES})
target_link_libraries(${LIB_NAME} ${EXTRA_LIBS})
