cmake_minimum_required(VERSION 3.2)
project(RTPS)

add_definitions(-DMAKE_DLL_RTPS)

SET(LIB_NAME RTPS)
SET(EXTRA_LIBS BaseLib RxConcurrent RxSignal NetworkLib DDS)
SET(SOURCE_PATH ${ONE_SOURCE_DIR}/${LIB_NAME})

set(SOURCE_FILES
    Cache/CacheChange.cpp
    Cache/CacheChange.h
    Cache/CacheChangeBase.cpp
    Cache/CacheChangeBase.h
    Cache/DataCache.cpp
    Cache/DataCache.h
    Cache/DataCacheBase.cpp
    Cache/DataCacheBase.h
    Cache/IncludeLibs.h
    DCPS/Interfaces/CacheReader.h
    DCPS/Interfaces/CacheWriter.h
    DCPS/Pub/CacheWriter.cpp
    DCPS/Pub/CacheWriter.h
    DCPS/Sub/CacheReader.cpp
    DCPS/Sub/CacheReader.h
    DCPS/IncludeLibs.h
    Discovery/SEDP/SEDPDiscoveryController.cpp
    Discovery/SEDP/SEDPDiscoveryController.h
    Discovery/SPDP/SPDPDiscoveredParticipantData.cpp
    Discovery/SPDP/SPDPDiscoveredParticipantData.h
    Discovery/SPDP/SPDPDiscoveryController.cpp
    Discovery/SPDP/SPDPDiscoveryController.h
    Discovery/DiscoveredParticipantData.cpp
    Discovery/DiscoveredParticipantData.h
    Discovery/DiscoveredReaderData.cpp
    Discovery/DiscoveredReaderData.h
    Discovery/DiscoveredTopicData.cpp
    Discovery/DiscoveredTopicData.h
    Discovery/DiscoveredWriterData.cpp
    Discovery/DiscoveredWriterData.h
    Discovery/DiscoveryController.cpp
    Discovery/DiscoveryController.h
    Discovery/ParticipantProxy.cpp
    Discovery/ParticipantProxy.h
    Elements/ChangeKind.h
    Elements/CommonDefines.h
    Elements/Count.h
    Elements/EntityId.h
    Elements/EntityName.h
    Elements/FragmentNumber.h
    Elements/FragmentNumberSet.h
    Elements/GUID.h
    Elements/GuidPrefix.h
    Elements/IncludeLibs.h
    Elements/KeyHash.h
    Elements/Locator.h
    Elements/LocatorList.h
    Elements/Parameter.h
    Elements/ParameterId.h
    Elements/ParameterList.h
    Elements/ParticipantMessageData.cpp
    Elements/ParticipantMessageData.h
    Elements/Property.h
    Elements/ProtocolId.h
    Elements/ProtocolVersion.h
    Elements/ReliabilityKind.h
    Elements/SequenceNumber.h
    Elements/SequenceNumberSet.h
    Elements/SerializedPayload.h
    Elements/StatusInfo.h
    Elements/SubmessageKind.h
    Elements/Timestamp.h
    Elements/TopicKind.h
    Elements/VendorId.h
    Factory/IncludeLibs.h
    Factory/RtpsFactory.cpp
    Factory/RtpsFactory.h
    Headers/DataEncapsulation.cpp
    Headers/DataEncapsulation.h
    Headers/IncludeLibs.h
    Headers/MessageHeader.cpp
    Headers/MessageHeader.h
    Headers/SubmessageHeader.cpp
    Headers/SubmessageHeader.h
    Machine/IncludeLibs.h
    Machine/RtpsMessageReceiver.cpp
    Machine/RtpsMessageReceiver.h
    Machine/RtpsMessageSender.cpp
    Machine/RtpsMessageSender.h
    Machine/VirtualMachine.cpp
    Machine/VirtualMachine.h
    Machine/VirtualMachineReader.cpp
    Machine/VirtualMachineReader.h
    Machine/VirtualMachineWriter.cpp
    Machine/VirtualMachineWriter.h
    Stateful/ChangeForReader.cpp
    Stateful/ChangeForReader.h
    Stateful/ChangeFromWriter.cpp
    Stateful/ChangeFromWriter.h
    Stateful/IncludeLibs.h
    Stateful/ReaderProxy.cpp
    Stateful/ReaderProxy.h
    Stateful/StatefulReader.cpp
    Stateful/StatefulReader.h
    Stateful/StatefulWriter.cpp
    Stateful/StatefulWriter.h
    Stateful/WriterProxy.cpp
    Stateful/WriterProxy.h
    Stateless/IncludeLibs.h
    Stateless/ReaderLocator.cpp
    Stateless/ReaderLocator.h
    Stateless/StatelessReader.cpp
    Stateless/StatelessReader.h
    Stateless/StatelessWriter.cpp
    Stateless/StatelessWriter.h
    Stateless/WriterLocator.cpp
    Stateless/WriterLocator.h
    Structure/IncludeLibs.h
    Structure/RtpsEndpoint.cpp
    Structure/RtpsEndpoint.h
    Structure/RtpsEntity.cpp
    Structure/RtpsEntity.h
    Structure/RtpsParticipant.cpp
    Structure/RtpsParticipant.h
    Structure/RtpsReader.cpp
    Structure/RtpsReader.h
    Structure/RtpsReaderProxyBase.cpp
    Structure/RtpsReaderProxyBase.h
    Structure/RtpsWriter.cpp
    Structure/RtpsWriter.h
    Submessages/IncludeLibs.h
    Submessages/RtpsAckNack.cpp
    Submessages/RtpsAckNack.h
    Submessages/RtpsData.cpp
    Submessages/RtpsData.h
    Submessages/RtpsDataFrag.cpp
    Submessages/RtpsDataFrag.h
    Submessages/RtpsGap.cpp
    Submessages/RtpsGap.h
    Submessages/RtpsHeartbeat.cpp
    Submessages/RtpsHeartbeat.h
    Submessages/RtpsHeartbeatFrag.cpp
    Submessages/RtpsHeartbeatFrag.h
    Submessages/RtpsInfoDestination.cpp
    Submessages/RtpsInfoDestination.h
    Submessages/RtpsInfoReply.cpp
    Submessages/RtpsInfoReply.h
    Submessages/RtpsInfoSource.cpp
    Submessages/RtpsInfoSource.h
    Submessages/RtpsInfoTimestamp.cpp
    Submessages/RtpsInfoTimestamp.h
    Submessages/RtpsNackFrag.cpp
    Submessages/RtpsNackFrag.h
    Submessages/RtpsPad.cpp
    Submessages/RtpsPad.h
    Submessages/RtpsSubmessageBase.cpp
    Submessages/RtpsSubmessageBase.h
    CommonDefines.h
    Export.h
    IncludeExtLibs.h
    IncludeLibs.h)

include_directories(${ONE_SOURCE_DIR})
add_library(${LIB_NAME} SHARED ${SOURCE_FILES})
target_link_libraries(${LIB_NAME} ${EXTRA_LIBS})
